--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
   "description": "Welcome to the Arab Telethon 8.1v { @D8_8Q }",
   "logo": "https://graph.org/file/2aeccbcf5a28db879d150.jpg",
   "keywords": ["plugin","modular","productivity"],
-  "repository": "https://github.com/help-iq2/telethon",
+  "repository": "https://github.com/kraar200/Ar",
   "website": "#TODO",
   "success_url": "#TODO",
   "env": {
