--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "The original Jython source",
-  "description": "Welcome to the Arab Telethon 8.1v { @D8_8Q }",
+  "description": "Welcome to the Jethon Kimo { @D8_8Q }",
   "logo": "https://graph.org/file/2aeccbcf5a28db879d150.jpg",
   "keywords": ["plugin","modular","productivity"],
   "repository": "https://github.com/kraar200/Ar",
